@@ -3,6 +3,7 @@ Credits:
 
 - The main code is based on the HPT Code by Matthias Tichy <mtt@tichy.de>
   2:2433/1245
+- areafix by Max Levenkov sackett@mail.ru 2:5000/117@fidonet
 
 - files.bbs add-ons by Alex Erzin <eaa@tpu.ru>
 - seen-by checking by Alex Erzin <eaa@tpu.ru>
