@@ -2,6 +2,11 @@ htick 0.03
 ----------
 
 ----- cvs ci ------
+max:
+Mon Jan  3 21:21:59 NOVT 2000
+* manual -> mandatory
+
+----- cvs ci ------
 Sat Dec 18 19:26:50 1999 
 Georgi (patch from Alex Semenyaka, 2:461/640):
 * fixed bug in AreaFix (%HELP)
